# DThouse_cxd

./: CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Jenkinsfile  README-CN.md  README.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  general-questions.md  performance-related-questions.md
alert/: README.md  README_cn.md  release.sh
alert/app/: rule.go
alert/utils/: config.go
cmake/: define.inc  env.inc  input.inc  install.inc  platform.inc  version.inc
documentation/tdenginedocs-cn/: index.html
documentation/tdenginedocs-en/: index.html
examples/C#/: .gitignore
examples/JDBC/: readme.md
examples/R/: command.txt
examples/c/: CMakeLists.txt  apitest.c  asyncdemo.c  stream.c  subscribe.c
examples/go/: taosdemo.go
examples/lua/: README.md
examples/matlab/: TDengineDemo.m
examples/nodejs/: README-win.md  node-example-raw.js  node-example.js
examples/python/: read_example.py
examples/rust/: README.md
importSampleData/: README.md  go.mod
importSampleData/app/: main.go
minidevops/: README.MD  demodashboard.json  run.sh
packaging/: check_package.sh  sed_jh.bat  sed_jh.sh  sed_kh.bat  sed_kh.sh  sed_power.bat  sed_power.sh  sed_pro.bat  sed_pro.sh  sed_tq.bat  sed_tq.sh
packaging/cfg/: nginxd.service  power.cfg  taos.cfg  taosd.service  tarbitratord.service
packaging/deb/: makedeb.sh  taosd
packaging/docker/: README.md  dockerbuild.sh  dockerbuildi.sh
snap/: snapcraft.yaml
src/: CMakeLists.txt
src/wal/test/: CMakeLists.txt
tests/: CMakeLists.txt  How-To-Run-Test-And-How-To-Add-New-Test-Case.md  README.md
(+373 files in other folders)
