CMAKE_MINIMUM_REQUIRED(VERSION 3.0...3.20)
PROJECT(DThouse)

IF (TD_LINUX)
  INCLUDE_DIRECTORIES(../inc)

  LIST(APPEND WALTEST_SRC ./waltest.c)
  ADD_EXECUTABLE(waltest ${WALTEST_SRC})
  TARGET_LINK_LIBRARIES(waltest twal os tutil)

ENDIF ()

IF (TD_DARWIN)
  INCLUDE_DIRECTORIES(../inc)

  LIST(APPEND WALTEST_SRC ./waltest.c)
  ADD_EXECUTABLE(waltest ${WALTEST_SRC})
  TARGET_LINK_LIBRARIES(waltest twal os tutil)

ENDIF ()

